--- a/package.json
+++ b/package.json
@@ -3,12 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/pro-components": "^2.7.1",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.16",
+    "@mui/material": "^5.15.17",
+    "@mui/x-charts": "^7.4.0",
+    "@mui/x-data-grid": "^7.3.2",
+    "@reduxjs/toolkit": "^2.2.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.17.0",
+    "axios": "^1.6.8",
+    "date-fns": "^2.30.0",
+    "dayjs": "^1.11.11",
+    "jspdf": "^2.5.1",
+    "jspdf-invoice-template": "^1.4.3",
+    "moment": "^2.30.1",
+    "mui": "^0.0.1",
     "react": "^18.3.1",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.12.7",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
