--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "axios": "^1.6.8",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.11",
+    "fs": "^0.0.1-security",
     "jspdf": "^2.5.1",
     "jspdf-invoice-template": "^1.4.3",
     "moment": "^2.30.1",
     "mui": "^0.0.1",
+    "qrcode": "^1.5.3",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
