--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.11",
     "fs": "^0.0.1-security",
+    "json2csv": "^6.0.0-alpha.2",
     "jspdf": "^2.5.1",
     "jspdf-invoice-template": "^1.4.3",
     "moment": "^2.30.1",
     "mui": "^0.0.1",
+    "papaparse": "^5.4.1",
     "qrcode": "^1.5.3",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
