--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "json2csv": "^6.0.0-alpha.2",
     "jspdf": "^2.5.1",
     "jspdf-invoice-template": "^1.4.3",
+    "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "mui": "^0.0.1",
     "papaparse": "^5.4.1",
@@ -29,6 +30,7 @@
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
+    "react-modal": "^3.16.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
