--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mui/material": "^5.15.17",
     "@mui/x-charts": "^7.4.0",
     "@mui/x-data-grid": "^7.3.2",
+    "@react-google-maps/api": "^2.20.6",
     "@reduxjs/toolkit": "^2.2.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
